further attempts to get the travis build to stop it's intermittent failures